--- a/index.html
+++ b/index.html
@@ -225,14 +225,16 @@
 // ────────────────────────────────────────────────
 //  REPLACE WITH YOUR OWN FIREBASE CONFIG
 // ────────────────────────────────────────────────
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
-  authDomain: "your-project-id.firebaseapp.com",
-  databaseURL: "https://your-project-id-default-rtdb.firebaseio.com",
-  projectId: "your-project-id",
-  storageBucket: "your-project-id.appspot.com",
-  messagingSenderId: "123456789012",
-  appId: "1:123456789012:web:xxxxxxxxxxxxxxxxxxxxxx"
+  apiKey: "AIzaSyDrHjrAfOd0YVFxy9-PTXX2DJ-MeerqS7Q",
+  authDomain: "teach-more.firebaseapp.com",
+  databaseURL: "https://teach-more-default-rtdb.firebaseio.com",
+  projectId: "teach-more",
+  storageBucket: "teach-more.firebasestorage.app",
+  messagingSenderId: "199102894627",
+  appId: "1:199102894627:web:f518551905763d01651796",
+  measurementId: "G-JG8YL4WZJR"
 };
 
 firebase.initializeApp(firebaseConfig);
