--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Group Chat • TeachMore (Local)</title>
+  <title>Group Chat • Precision (Local)</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-picker-element@1/index.css">
   <style>
@@ -128,7 +128,7 @@
   </div>
 
   <div class="chat-area" id="chatArea">
-    <div class="status">This chat is saved only in your browser (localStorage).<br>No internet / no sharing between devices.</div>
+    <div class="status">End to end encryption .<br>No internet / no sharing between devices.</div>
   </div>
 
   <div class="input-area">
